tests/negative/Test1.sp
(* Wrong type operators *)
pi:Int= 3+3+4;
a:String = "2";
pi2:Int = a * 3;